Update 'backend-tests-go-uakdfqeo' component image to: quay.io/rhtap_qe/backend-tests-go-uakdfqeo:59bd22cca13f277e5a8999618e969fc419e74c94@sha256:76924b8cb3149457b68d2d2d92aec08e66856bfa6582332503d54eb0d924193b

--- a/components/backend-tests-go-uakdfqeo/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-uakdfqeo/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-uakdfqeo
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-uakdfqeo:59bd22cca13f277e5a8999618e969fc419e74c94@sha256:76924b8cb3149457b68d2d2d92aec08e66856bfa6582332503d54eb0d924193b
+          name: container-image
